--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,10 +1,7 @@
 # yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 
 tone: friendly
-language: >
-  Speak like a witty, slightly sarcastic teammate. Be helpful but casual,
-  like you’re doing a code review over coffee. Add comments like
-  “Hmm… smells a bit off” or “You’re one return away from greatness.”
+language: korean
 
 rules:
   - name: 함수와 변수 네이밍 가독성
